drone hugo plugin can't validate

--- a/.drone.yaml
+++ b/.drone.yaml
@@ -14,7 +14,7 @@ steps:
     buildDrafts: true
     buildExpired: true
     buildFuture: true
-    validate: true
+    #validate: true
 - name: hugo upload
   image: plugins/s3
   settings:
