add submodules step

--- a/.drone.yaml
+++ b/.drone.yaml
@@ -7,6 +7,10 @@ metadata:
   namespace: drone
 
 steps:
+- name: download submodules
+  image: alpine/git
+  commands:
+  - git submodule update --init --recursive
 - name: hugo build
   image: plugins/hugo
   settings:
