--- a/.drone.yaml
+++ b/.drone.yaml
@@ -23,6 +23,7 @@ steps:
   image: plugins/s3
   settings:
     bucket: test.sud0.com
+    region: us-east-2
     access_key:
       from_secret: aws_access_key_id
     secret_key:
