--- a/.drone.yaml
+++ b/.drone.yaml
@@ -31,6 +31,7 @@ steps:
     acl: public-read
     source: public/**/*
     target: /
+    strip_prefix: public/
 dns_config:
   options:
     - name: ndots
